EXLM-3778 Fix truncation in Icon block

--- a/blocks/icon-block/icon-block.css
+++ b/blocks/icon-block/icon-block.css
@@ -38,8 +38,9 @@
   color: var(--non-spectrum-custom-dark);
   font-weight: bold;
   margin-bottom: 8px;
+  overflow: hidden;
+  text-overflow: ellipsis;
   max-width: 229px;
-  flex: 1;
 }
 
 .icon-block .icon-description {
